# botway

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .gitpod.yml  .golangci.yaml  .goreleaser.yaml  .goreleaser.yml  .prettierignore  .snyk  LICENSE  README.md  Taskfile.yaml  botway.json  go.mod  go.sum  gomo.json  install.js  main.go  npm-config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODE_OF_CONDUCT.md  dependabot.yml
.gitpod/: Dockerfile
api/: get-latest.go
app/: .env.example  package.json  postcss.config.js  tailwind.config.js  tsconfig.json
assets/: README.md  data.ts  deno.json  fresh.gen.ts  import_map.json
coder/: Dockerfile  Dockerfile.coder  settings.json
constants/: constants.go
core/: .env.template  Dockerfile  README.md  docker-compose.yaml  docker.env  middleware.ts  package.json  tailwind.config.js  tsconfig.json
docker/: README.md  alpine-glibc.dockerfile  alpine.dockerfile  bfs.dockerfile  build.ps1  build.sh  centos.dockerfile  core.dockerfile  debian.dockerfile  distroless.dockerfile  entry.sh  full.dockerfile  gp-image.dockerfile  ubuntu.dockerfile
dockerfiles/: README.md  blank.dockerfile  bun.dockerfile  c-discord.dockerfile  cargo.dockerfile  cmake-discord.dockerfile  cmake-telegram.dockerfile  crystal.dockerfile  csharp.dockerfile  dart.dockerfile  (+14 more)
templates/discord/rust/assets/: Cargo.toml
templates/discord/rust/assets/cargo/: Dockerfile
templates/discord/rust/assets/fleet/: Dockerfile
templates/discord/rust/assets/src/: main.rs
(+654 files in other folders)
