[package]
name = "{{.BotName}}"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "voice"] }
tokio = { version = "1.0", features = ["full"] }
botway-rs = "0.2"
songbird = "0.2.2"

[[bin]]
name = "bot"
path = "src/main.rs"
